# MusikWecker

./: .clang-format  .clangd  .gitignore  Audio.cpp  Audio.h  AudioFileSourceSdFs.cpp  AudioFileSourceSdFs.h  ClockFaces.cpp  ClockFaces.h  ClockMenu.cpp  ClockMenu.h  Debug.cpp  Debug.h  Definitions.h  DiagnosticMenu.cpp  DiagnosticMenu.h  DisplayUtils.cpp  DisplayUtils.h  EnumBits.h  FileMenu.cpp  FileMenu.h  Globals.h  LUTMath.cpp  LUTMath.h  Menu.cpp  Menu.h  MenuClass.h  MenuImpls.cpp  MenuImpls.h  MusikWecker.ino  OptionsMenu.cpp  OptionsMenu.h  PrintString.h  README.md  RealtimeTimer.cpp  RealtimeTimer.h  SRLV.cpp  SRLV.h  SdFatConfig.h  Settings.cpp  (+30 more)
Documentation/: SRLV.md  SUMMARY.md  book.toml  development.md
Documentation/manual_de/: README.md  clock.md  file_management.md
Documentation/manual_en/: README.md
EDA/: MusikWeckerCase-BodyButtonHoles_0.4n_0.2mm_PLA_MINI_3h41m.bgcode  MusikWeckerCase-BodyButtonHoles_0.4n_0.2mm_PLA_MINI_3h41m.gcode  MusikWeckerCase.FCStd  MusikWeckerCase.d3ddoc  MusikWeckerCase_bottom.3mf  MusikWeckerCase_top.3mf
EDA/MusikWecker/: .gitignore  MusikWecker.hprj  blocks.json  board.json  top_block.json  top_schematic.json
EDA/MusikWecker/pool/entities/: 7530.json  WeMos_d1_mini.json  my_pcm5102a.json  pam8610_breakout.json  speaker.json  usb_pd_vin.json
EDA/MusikWecker/pool/parts/: 7530.json  WeMos_D1_mini.json  my_pcm5102a.json  pam8610_breakout.json  pcm5102a.json  speaker.json  (+1 more)
compression/: __main__.py  bits.py  deltas.csv  distances.csv  histogramss.ipynb  stats.csv  turtle.py
tiff_test/: CMakeLists.txt  main.cpp
(+14 files in other folders)
